k8s/apps/nextcloud/nextcloud-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: default
spec:
  ports:
  - name: port-3306
    port: 3306
    targetPort: 3306
  selector:
    app: nextcloud-db
