k8s/apps/nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
spec:
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app: nextcloud
